--- a/about.html
+++ b/about.html
@@ -54,23 +54,23 @@
               leading IBA Approved vide Code DLO-1879 transporters in India,
               having our Head Office at Delhi, Branch Offices and Associated
               Offices in almost all the major cities and ports of India.
-              <br />
+              <br /><br />
               In list of our fleet, We have entire range of GOODS VEHICLES i.e.
-              trailers, trucks, LCVs and containerized vehicles. <br />
+              trailers, trucks, LCVs and containerized vehicles. <br /><br />
               We are providing PARCEL Services from MUMBAI, BHIWANDI, VAPI and
               SILVASSA to DELHI, GURGAON, BHIWARI, FARIDABAD, NOIDA and vice
-              versa in lowest transit time of 4 days. <br />
+              versa in lowest transit time of 4 days. <br /><br />
               We are providing 48 hours committed fast delivery service for
               above stations also. We are specialist in the transportation of
               over dimension cargo and machinery. We are lifting the 20’ &amp;
               40’ containers of import &amp; export from MUMBAI AND NAHVA SHEVA
-              PORT for various I.C.Ds &amp; C.F.Ss.(dry ports). <br />We have
-              trained staff and skilled labour to handle your consignments and
-              cargo at the very safest method. We trust in view of above facts
-              your good self will consider us &amp; give an opportunity to prove
-              ourselves. We will be highly obliged and grateful to you if you
-              will pass on any enquiry for road freight so that you will find
-              our rates as best and very competitive.
+              PORT for various I.C.Ds &amp; C.F.Ss.(dry ports). <br /><br />
+              We have trained staff and skilled labour to handle your
+              consignments and cargo at the very safest method. We trust in view
+              of above facts your good self will consider us &amp; give an
+              opportunity to prove ourselves. We will be highly obliged and
+              grateful to you if you will pass on any enquiry for road freight
+              so that you will find our rates as best and very competitive.
             </p>
           </div>
         </div>
@@ -83,24 +83,20 @@
     </div>
     <br /><br />
     <div class="container">
+      <h5 class="center-align teal-text">Our Membership</h5>
+      <br /><br />
       <div class="row">
-        <div class="col s12 m6">
-          <h5>we run over 200 small utility vehicles and 600 trucks</h5>
-          <div class="light flow-text">
-            When the demands of your supply chain require a depth of knowledge
-            and a level of customization beyond our standard Transportation
-            services, Omkara Transport's Logistics Management experts are here
-            to help.When the demands of your supply chain require a depth of
-            knowledge and a level of customization beyond our standard
-            Transportation services, Omkara Transport's Logistics Management
-            experts are here to help.When the demands of your supply chain
-            require a depth of knowledge and a level of customization beyond our
-            standard Transportation services, Omkara Transport's Logistics
-            Management experts are here to help
-          </div>
+        <div class="col s12 m3">
+          <img src="./content/AIMTC LOGO.jpg" alt="" height="200" width="200" />
         </div>
-        <div class="col s12 m6">
-          <img src="./content/fleet.jpg" alt="" class="responsive-img" />
+        <div class="col s12 m3">
+          <img src="./content/BGTA LOGO.jpg" alt="" height="200" width="200" />
+        </div>
+        <div class="col s12 m3">
+          <img src="./content/CGTA LOGO.jpg" alt="" height="200" width="200" />
+        </div>
+        <div class="col s12 m3">
+          <img src="./content/DGTA LOGO.jpg" alt="" height="200" width="200" />
         </div>
       </div>
     </div>
