--- a/index.html
+++ b/index.html
@@ -209,13 +209,26 @@
         </div>
       </section>
     </div>
-
-    <div class="" id="index-banner">
-      <div class="parallax-container">
-        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+    <br /><br />
+    <div class="container">
+      <h5 class="center-align teal-text">Our Membership</h5>
+      <br /><br />
+      <div class="row">
+        <div class="col s12 m3">
+          <img src="./content/AIMTC LOGO.jpg" alt="" height="200" width="200" />
+        </div>
+        <div class="col s12 m3">
+          <img src="./content/BGTA LOGO.jpg" alt="" height="200" width="200" />
+        </div>
+        <div class="col s12 m3">
+          <img src="./content/CGTA LOGO.jpg" alt="" height="200" width="200" />
+        </div>
+        <div class="col s12 m3">
+          <img src="./content/DGTA LOGO.jpg" alt="" height="200" width="200" />
+        </div>
       </div>
     </div>
-
+    <br /><br />
     <div class="container"></div>
 
     <footer class="page-footer teal darken-1"></footer>
