--- a/about.html
+++ b/about.html
@@ -87,16 +87,80 @@
       <br /><br />
       <div class="row">
         <div class="col s12 m3">
-          <img src="./content/AIMTC LOGO.jpg" alt="" height="200" width="200" />
+          <a href="https://aimtc.org/" target="_blank">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img
+                  class="activator"
+                  src="./content/AIMTC LOGO.jpg"
+                  height="200"
+                  width="200"
+                />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"
+                  >ALL INDIA MOTOR TRANSPORT CONGRESS</span
+                >
+              </div>
+            </div>
+          </a>
         </div>
         <div class="col s12 m3">
-          <img src="./content/BGTA LOGO.jpg" alt="" height="200" width="200" />
+          <a href="http://bgta.in/" target="_blank">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img
+                  class="activator"
+                  src="./content/BGTA LOGO.jpg"
+                  height="200"
+                  width="200"
+                />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"
+                  >BOMBAY GOODS TRANSPORT ASSOCIATION</span
+                >
+              </div>
+            </div>
+          </a>
         </div>
         <div class="col s12 m3">
-          <img src="./content/CGTA LOGO.jpg" alt="" height="200" width="200" />
+          <a href="#" target="_blank">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img
+                  class="activator"
+                  src="./content/CGTA LOGO.jpg"
+                  height="200"
+                  width="200"
+                />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"
+                  >CHANDIGARH TRANSPORT ASSOCIATION</span
+                >
+              </div>
+            </div>
+          </a>
         </div>
         <div class="col s12 m3">
-          <img src="./content/DGTA LOGO.jpg" alt="" height="200" width="200" />
+          <a href="#" target="_blank">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img
+                  class="activator"
+                  src="./content/DGTA LOGO.jpg"
+                  height="200"
+                  width="200"
+                />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"
+                  >DELHI GOODS TRANSPORT ASSOCIATION</span
+                >
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
