--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         <div class="container">
           <h5 class="center-align teal-text">Bank Details</h5>
           <br />
-          <table class="responsive-table striped centered">
+          <table class="striped centered">
             <tr>
               <td><b>Bank Name</b></td>
               <td>Yes Bank Limited</td>
