--- a/gallery.html
+++ b/gallery.html
@@ -36,34 +36,134 @@
       </div>
     </div>
     <br /><br />
-    <div class="" id="index-banner">
-      <div class="parallax-container">
-        <div class="parallax"><img src="./content/banner2.jpg" /></div>
-      </div>
-    </div>
-    <br /><br />
-    <div class="container">
+    <div class="container img-gallery">
       <div class="row">
         <div class="col s12 m4">
           <img
-            src="./content/oMAKARA-1copy.jpg"
+            src="./content/gallery/IMG-20210605-WA0029.jpg"
             alt=""
-            class="responsive-img"
+            class="responsive-img materialboxed"
           />
+          <br />
         </div>
         <div class="col s12 m4">
           <img
-            src="./content/oMAKARA-copy-1.jpg"
+            src="./content/gallery/IMG-20210605-WA0030.jpg"
             alt=""
-            class="responsive-img"
+            class="responsive-img materialboxed"
           />
+          <br />
         </div>
         <div class="col s12 m4">
           <img
-            src="./content/oMAKARA-copy-2.jpg"
+            src="./content/gallery/IMG-20210605-WA0031.jpg"
             alt=""
-            class="responsive-img"
+            class="responsive-img materialboxed"
           />
+          <br />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG-20210605-WA0032.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_151629.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_151640.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_151720.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/Polish_20201031_230743740.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_151759-01.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_152311.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_152509.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_152526.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_160456.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <img
+            src="./content/gallery/IMG_20201028_155309__01.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+          />
+          <br />
+        </div>
+        <div class="col s12 m4">
+          <br />
         </div>
       </div>
     </div>
