--- a/index.html
+++ b/index.html
@@ -211,6 +211,43 @@
     </div>
     <br /><br />
     <div class="container">
+      <h5 class="center-align teal-text">From CEO's Desk</h5>
+      <br /><br />
+      <div class="row">
+        <div class="col s12 m6">
+          <h5></h5>
+          <img
+            src="./content/md.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+            style="max-height: 500px; width: 100%"
+          />
+        </div>
+        <div class="col s12 m6">
+          <div class="light">
+            <p style="font-size: 18px; line-height: 25px">
+              From the beginning, Om Prakash Jangid aware of their
+              responsibilities as entrepreneurs towards society and the
+              environment. <br /><br />
+              He built up their company by imparting to all his employees values
+              such as thoroughness, working with attention to detail and
+              treating customers with respect! To ensure the development of his
+              companies, Om prakash Jangid has always: <br /><br />
+              • Listened to his customers and their needs  <br /><br />
+              • Carefully selected his teams of employees and has tried to
+              prioritise local workers as far as possible  <br /><br />
+              • Regularly invested in the modernisation of rolling stock and
+              infrastructure <br /><br />
+              • Relied on technology to increase the efficiency and performance
+              of the services offered while minimizing the impact of activities
+              on the environment.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br /><br />
+    <div class="container">
       <h5 class="center-align teal-text">Our Membership</h5>
       <br /><br />
       <div class="row">
