--- a/about.html
+++ b/about.html
@@ -41,13 +41,43 @@
         <div class="parallax"><img src="./content/banner1.jpg" /></div>
       </div>
     </div>
+    <br /><br />
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
-          <img src="./content/man.png" alt="" class="responsive-img" />
+          <h5>History</h5>
+          <div class="light">
+            <p style="font-size: 18px; line-height: 25px">
+              Omkara Transport Private Limited, a successful company built on
+              the experience of its founder. <br /><br />
+              In 1999, following on from nearly 8 to 9 years of work devoted to
+              transport and working in major States of India like Maharashtra,
+              Madhya Pradesh, Goa, Tamilnadu, Uttrakhand, Jammu Kashmir, Delhi,
+              Uttarpradesh Mr. Om Prakash Jangid purchased a truck and managed
+              it on the route of Delhi to Mumbai and gradually it became a fleet
+              of trucks on Major routes in india and Delhi emerged as our
+              headquarters with the firm intention of developing an efficient
+              service offer combining the transport and logistics needs of
+              customers.
+            </p>
+          </div>
         </div>
         <div class="col s12 m6">
-          <h5>Introduction</h5>
+          <h5></h5>
+          <img src="./content/history.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+    <br /><br />
+
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h5></h5>
+          <img src="./content/about us.png" alt="" />
+        </div>
+        <div class="col s12 m6">
+          <h5>About Us</h5>
           <div class="light">
             <p style="font-size: 18px; line-height: 25px">
               We are very much pleased to introduce ourselves as one of the
@@ -76,12 +106,45 @@
         </div>
       </div>
     </div>
-    <div class="" id="index-banner">
-      <div class="parallax-container">
-        <div class="parallax"><img src="./content/banner2.jpg" /></div>
+    <br /><br />
+
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h5>From CEO's Desk</h5>
+          <div class="light">
+            <p style="font-size: 18px; line-height: 25px">
+              From the beginning, Om Prakash Jangid aware of their
+              responsibilities as entrepreneurs towards society and the
+              environment. <br /><br />
+              He built up their company by imparting to all his employees values
+              such as thoroughness, working with attention to detail and
+              treating customers with respect! To ensure the development of his
+              companies, Om prakash Jangid has always: <br /><br />
+              • Listened to his customers and their needs  <br /><br />
+              • Carefully selected his teams of employees and has tried to
+              prioritise local workers as far as possible  <br /><br />
+              • Regularly invested in the modernisation of rolling stock and
+              infrastructure <br /><br />
+              • Relied on technology to increase the efficiency and performance
+              of the services offered while minimizing the impact of activities
+              on the environment.
+            </p>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <h5></h5>
+          <img
+            src="./content/md.jpg"
+            alt=""
+            class="responsive-img materialboxed"
+            style="max-height: 500px; width: 100%"
+          />
+        </div>
       </div>
     </div>
     <br /><br />
+
     <div class="container">
       <h5 class="center-align teal-text">Our Membership</h5>
       <br /><br />
