about us update

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </h2>
               <h5 class="center">Heavy Lift</h5>
 
-              <p class="light">We proide heavy lifting services.</p>
+              <p class="light">We provide heavy lifting services.</p>
             </div>
           </div>
         </div>
