--- a/about.html
+++ b/about.html
@@ -38,14 +38,17 @@
     <br /><br />
     <div class="" id="index-banner">
       <div class="parallax-container">
-        <div class="parallax"><img src="./content/banner1.jpg" /></div>
+        <div class="parallax">
+          <img src="./content/banner1.jpg" alt="" class="responsive-img" />
+        </div>
       </div>
     </div>
     <br /><br />
     <div class="container">
+      <h5 class="center-align teal-text">History</h5>
+      <br /><br />
       <div class="row">
         <div class="col s12 m6">
-          <h5>History</h5>
           <div class="light">
             <p style="font-size: 18px; line-height: 25px">
               Omkara Transport Private Limited, a successful company built on
@@ -64,20 +67,21 @@
         </div>
         <div class="col s12 m6">
           <h5></h5>
-          <img src="./content/history.jpg" alt="" />
+          <img src="./content/history.jpg" alt="" class="responsive-img" />
         </div>
       </div>
     </div>
     <br /><br />
 
     <div class="container">
+      <h5 class="center-align teal-text">About Us</h5>
+      <br /><br />
       <div class="row">
         <div class="col s12 m6">
           <h5></h5>
-          <img src="./content/about us.png" alt="" />
+          <img src="./content/about us.png" alt="" class="responsive-img" />
         </div>
         <div class="col s12 m6">
-          <h5>About Us</h5>
           <div class="light">
             <p style="font-size: 18px; line-height: 25px">
               We are very much pleased to introduce ourselves as one of the
@@ -109,9 +113,10 @@
     <br /><br />
 
     <div class="container">
+      <h5 class="center-align teal-text">From CEO's Desk</h5>
+      <br /><br />
       <div class="row">
         <div class="col s12 m6">
-          <h5>From CEO's Desk</h5>
           <div class="light">
             <p style="font-size: 18px; line-height: 25px">
               From the beginning, Om Prakash Jangid aware of their
