--- a/gallery.html
+++ b/gallery.html
@@ -36,135 +36,28 @@
       </div>
     </div>
     <br /><br />
-    <div class="container img-gallery">
-      <div class="row">
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG-20210605-WA0029.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG-20210605-WA0030.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG-20210605-WA0031.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
+    <nav style="height: 60px; line-height: 60px">
+      <div class="nav-wrapper teal">
+        <ul class="left">
+          <li><a href="#ODC">ODC</a></li>
+          <li><a href="#others">Others</a></li>
+        </ul>
       </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG-20210605-WA0032.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_151629.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_151640.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
+    </nav>
+    <br />
+    <div class="container img-gallery img-gallery-odc" id="ODC">
+      <h5 class="teal-text center-align">Over Dimension Consignment</h5>
+      <br />
+      <div class="progress">
+        <div class="indeterminate"></div>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_151720.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/Polish_20201031_230743740.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_151759-01.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_152311.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_152509.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_152526.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_160456.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <img
-            src="./content/gallery/IMG_20201028_155309__01.jpg"
-            alt=""
-            class="responsive-img materialboxed"
-          />
-          <br />
-        </div>
-        <div class="col s12 m4">
-          <br />
-        </div>
+    <div class="container img-gallery img-gallery-random" id="others">
+      <h5 class="teal-text center-align">Others</h5>
+      <br />
+      <div class="progress">
+        <div class="indeterminate"></div>
       </div>
     </div>
 
