--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
               </h2>
               <h5 class="center">Fast Delivery</h5>
 
-              <p class="light">We provide fastest devliery.</p>
+              <p class="light">
+                We are providing 48 hours committed fast delivery service for
+                above stations also. We are specialist in the transportation of
+                over dimension cargo and machinery. We are lifting the 20’ & 40’
+                containers of import & export from MUMBAI AND NAHVA SHEVA PORT
+                for various I.C.Ds & C.F.Ss.(dry ports).
+              </p>
             </div>
           </div>
 
@@ -64,7 +70,12 @@
 
               <p class="light">
                 We are completely commited to provide best services to our
-                clients.
+                clients. We have trained staff and skilled labour to handle your
+                consignments and cargo at the very safest method. We trust in
+                view of above facts your good self will consider us & give an
+                opportunity to prove ourselves. We will be highly obliged and
+                grateful to you if you will pass on any enquiry for road freight
+                so that you will find our rates as best and very competitive.
               </p>
             </div>
           </div>
@@ -76,7 +87,10 @@
               </h2>
               <h5 class="center">Heavy Lift</h5>
 
-              <p class="light">We provide heavy lifting services.</p>
+              <p class="light">
+                We provide heavy lifting including "Over Dimension Consignments"
+                services.
+              </p>
             </div>
           </div>
         </div>
@@ -87,7 +101,7 @@
       <img src="./content/Truck.gif" alt="" class="responsive-img" />
     </div>
     <div class="container">
-      <h5 class="center-align">Our Focus</h5>
+      <h5 class="center-align teal-text">Our Focus</h5>
       <br />
       <section>
         <div class="container py-5">
@@ -212,7 +226,7 @@
     <br /><br />
     <div class="container">
       <h5 class="center-align teal-text">From CEO's Desk</h5>
-      <br /><br />
+      <br />
       <div class="row">
         <div class="col s12 m6">
           <h5></h5>
@@ -249,7 +263,7 @@
     <br /><br />
     <div class="container">
       <h5 class="center-align teal-text">Our Membership</h5>
-      <br /><br />
+      <br />
       <div class="row">
         <div class="col s12 m3">
           <a href="https://aimtc.org/" target="_blank">
@@ -330,7 +344,12 @@
       </div>
     </div>
     <br /><br />
-    <div class="container"></div>
+    <div class="container">
+      <h5 class="center-align teal-text">Gallery</h5>
+      <br />
+      <div class="row img-gallery home-screen-gallery"></div>
+    </div>
+    <br /><br />
 
     <footer class="page-footer teal darken-1"></footer>
 
