--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <br /><br />
-    <nav style="height: 60px; line-height: 60px">
+    <nav style="height: 60px; line-height: 60px" class="container">
       <div class="nav-wrapper teal">
         <ul class="left">
           <li><a href="#ODC">ODC</a></li>
