--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
     <nav style="height: 60px; line-height: 60px" class="container">
       <div class="nav-wrapper teal">
         <ul class="left">
-          <li><a href="#ODC">ODC</a></li>
+          <li><a href="#ODC">Over Dimension Consignment</a></li>
           <li><a href="#others">Others</a></li>
         </ul>
       </div>
