--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
               In 1999, following on from nearly 8 to 9 years of work devoted to
               transport and working in major States of India like Maharashtra,
               Madhya Pradesh, Goa, Tamilnadu, Uttrakhand, Jammu Kashmir, Delhi,
-              Uttarpradesh Mr. Om Prakash Jangid purchased a truck and managed
-              it on the route of Delhi to Mumbai and gradually it became a fleet
-              of trucks on Major routes in india and Delhi emerged as our
-              headquarters with the firm intention of developing an efficient
-              service offer combining the transport and logistics needs of
-              customers.
+              Uttarpradesh <b>Om Prakash Jangid</b> purchased a truck and
+              managed it on the route of Delhi to Mumbai and gradually it became
+              a fleet of trucks on Major routes in india and Delhi emerged as
+              our headquarters with the firm intention of developing an
+              efficient service offer combining the transport and logistics
+              needs of customers.
             </p>
           </div>
         </div>
@@ -119,13 +119,13 @@
         <div class="col s12 m6">
           <div class="light">
             <p style="font-size: 18px; line-height: 25px">
-              From the beginning, Om Prakash Jangid aware of their
+              From the beginning, <b>Om Prakash Jangid</b> was aware of their
               responsibilities as entrepreneurs towards society and the
               environment. <br /><br />
               He built up their company by imparting to all his employees values
               such as thoroughness, working with attention to detail and
               treating customers with respect! To ensure the development of his
-              companies, Om prakash Jangid has always: <br /><br />
+              companies, <b>Om Prakash Jangid</b> has always: <br /><br />
               • Listened to his customers and their needs  <br /><br />
               • Carefully selected his teams of employees and has tried to
               prioritise local workers as far as possible  <br /><br />
