--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
       </div>
       <br /><br />
     </div>
-    <div class="container center-align">
-      <img src="./content/Truck.gif" alt="" class="responsive-img" />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax">
+          <img src="./content/banner2.jpg" alt="" class="responsive-img" />
+        </div>
+      </div>
     </div>
     <div class="container">
       <h5 class="center-align teal-text">Our Focus</h5>
@@ -340,6 +344,14 @@
               </div>
             </div>
           </a>
+        </div>
+      </div>
+    </div>
+    <br /><br />
+    <div class="" id="index-banner">
+      <div class="parallax-container">
+        <div class="parallax">
+          <img src="./content/banner3.jpg" alt="" class="responsive-img" />
         </div>
       </div>
     </div>
