--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
       </section>
     </div>
     <br /><br />
+    <div>
+      <iframe
+        style="width: 100%"
+        class="youtube"
+        src="https://www.youtube.com/embed/cP4ya-t9RME"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    <br /><br />
     <div class="container">
       <h5 class="center-align teal-text">From CEO's Desk</h5>
       <br />
