--- a/offices.html
+++ b/offices.html
@@ -54,7 +54,7 @@
                 The Professional Carriers with Personal Care<br/>
               <address>Head Office:-660,Sanjay Enclave<br />
                 Opp.G.T.K.Depot.G.T.Karnal Road, Delhi-33<br/>
-                Ph.[91-11] 27639241,27639341,27630041,27634841,27633841<br/>
+                Ph. +91-9350154841, +91-9311310041, +91-7678698709 <br/>
                 Website: <a href="#" target="_blank">www.omkaratransport.com</a><br/>
                 Email: <a href="mailTo:accounts@omkaratransport.com">accounts@omkaratransport.com</a></address>
               </p>
@@ -73,7 +73,7 @@
                 <div class="card-content white-text">
                   <span class="card-title">Mumbai</span>
                   <p>105, Sterling Chamber, Pune Street,<br />
-                    MUMBAI-400009<br />
+                    MUMBAI- 400009<br />
                     Contact Person: ASHOK<br />
                     Ph- 022-41228651,40028641 F-022-23748845,9321697083
                   </p>
@@ -215,7 +215,7 @@
                     <span class="card-title">Ahmedabad</span>
                     <p>603, P.B.Paekh Tower <br />
                         opp.Vanjay Bhawan,Kakankria, Ahmedabad-22 <br />
-                        Cotact Person: Ramesh Sharma <br />
+                        Contact Person: Ramesh Sharma <br />
                         Ph- 09426328041, 09228801900, 079-25466923                                                                                            
                     </p>
                   </div>
