--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title>Omkara - Cotact Us</title>
+    <title>Omkara - Contact Us</title>
 
     <!-- CSS  -->
     <link
