--- a/qrCode.html
+++ b/qrCode.html
@@ -88,7 +88,7 @@
         ></div>
       </div>
       <div class="helper"></div>
-      <img
+      <img alt=""
         id="welcomeImg"
         imageonload=""
         ng-src="./qrCode/45181985_1.png"
@@ -353,7 +353,7 @@
                     <i class="icon-social-media"></i>
                     <div class="channels-padding mt-0">
                       <!-- ngRepeat: channel in view.code.channels track by $index --><a
-                        href="http://www.instagram.com/Otpl_logistics"
+                        href="http://www.instagram.com/omkaratransport"
                         target="_blank"
                         class="channel-container ng-scope"
                         id="channel-item-Instagram"
@@ -1065,7 +1065,7 @@
               channels: [
                 {
                   input_prefix_label: "@",
-                  link: "Otpl_logistics",
+                  link: "omkaratransport",
                   label: "",
                   name: "Instagram",
                 },
